--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "username",
     "yellow"
   ],
-  "author": "Drake Witt",
+  "author": "NF1337",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/NF1337/SteamVRonline/issues"
